add GCP support for tag